--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Sultan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "next": "^7.0.2",
     "react": "^16.6.3",
